--- a/package.json
+++ b/package.json
@@ -19,13 +19,23 @@
     }
   },
   "license": "MIT",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
     "Next Auth",
     "ASP.Net Core",
     ".NET Core",
     "Identity"
-  ]
+  ],
+  "scripts": {
+    "clean": "echo Cleaning....",
+    "test": "pnpm test:IdentityEndpointsSample",
+    "test:IdentityEndpointsSample": "pnpm clean && ./tests/IdentityEndpointsSample/test.sh"
+  },
+  "dependencies": {
+    "next-auth": "^4.23.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.3",
+    "jest": "^29.6.2",
+    "ts-jest": "^29.1.1"
+  }
 }
